# pdf-extractext

./: .env.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  DEMO.md  EJEMPLOS.md  LICENSE  QUICKSTART.md  README.md  REVISION_ENUNCIADO.md  START_HERE.md  VISUAL_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routers/: __init__.py  document.py
app/config/: settings.py
app/models/: __init__.py  document.py
app/repositories/: __init__.py  document_repository.py
app/schemas/: __init__.py  document.py
app/services/: __init__.py  document_service.py
app/utils/: database.py
tests/: conftest.py  test_documents.py
tests/api/: test_document_create.py  test_document_delete.py  test_document_extract.py  test_document_read.py  test_document_update.py  test_health.py
tests/support/: api_documents.py  pdf.py
