[project]
name = "pdf-extractext"
version = "0.1.0"
description = "PDF extraction API with 3-layer architecture"
readme = "README.md"
# Actualizamos el requerimiento mínimo a 3.13 para que 'uv' resuelva estrictamente sobre esta base
requires-python = ">=3.13" 
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.38",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.24.0,<1.0.0",
    "black>=26.3.0",
    "flake8>=7.2.0",
    "mypy>=1.20.1",
    "isort>=8.0.1",
]

pdf = [
    "pdfplumber>=0.11.9",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
